Adding email, search and hot

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,2 @@
-<form action="/search-results" method="post">
-    <label>Search</label>
-    <input/>
-    <button type="submit">search</button>
-</form>
+<h1>Top News</h1>
+{{> newsFeed listOfArticles=results }}
