--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,1 +1,10 @@
 <h1>Search NYT</h1>
+
+<form action="/search-results" method="post">
+    <label>Search</label>
+    <input name="name"/>
+    <button type="submit">search</button>
+</form>
+
+<a href="/">Home</a>
+<a href="/email">Most emailed Stories</a>
