--- a/src/views/partials/newsFeed.hbs
+++ b/src/views/partials/newsFeed.hbs
@@ -1,7 +1,7 @@
-<h1>feed</h1>
-
 {{#each listOfArticles}}
-    <img src="{{this.thumbnail_standard}}">
-    {{this.title}}
+    <div class="article">
+        <h2>{{this.title}}</h2>
+        <img src="{{this.thumbnail_standard}}">
+    </div>
     <br>
 {{/each}}
