--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -10,8 +10,9 @@
 <body>
     {{> navbar}}
     <div class="feed">
-        <h1>Feed</h1>
+        {{!-- <h1>Feed</h1> --}}
         {{{ body }}}
     </div>
+    <script src="/javascript/articleBackground.js"></script>
 </body>
 </html>
