--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -3,10 +3,10 @@
     <form action="/search-results" method="post">
         <label>Search</label>
         <input name="name"/>
-        <button type="submit">search</button>
+        <button type="submit">Go</button>
     </form>
 
     <a href="/">Home</a>
     <a href="/email">Most emailed Stories</a>
-    <a href="/top">top stories from today</a>
+    <a href="/top">Top stories from today</a>
 </div>
