--- a/src/views/partials/searchFeed.hbs
+++ b/src/views/partials/searchFeed.hbs
@@ -1,6 +1,9 @@
 {{#each listOfArticles}}
     <div class="article">
-        <h2>{{this.headline.main}}</h2>
+        <div class="text">
+            <a href="{{this.web_url}}"><h2>{{this.headline.main}}</h2></a>
+            <p>{{this.lead_paragraph}}</p>
+        </div>
         <img src="https://nytimes.com/{{this.multimedia.0.url}}">
     </div>
     <br>
