--- a/src/views/partials/topFeed.hbs
+++ b/src/views/partials/topFeed.hbs
@@ -1,10 +1,10 @@
 {{#each listOfArticles}}
     <div class="article">
         <div class="text">
-            <h2>{{this.title}}</h2>
+            <a href="{{this.url}}"><h2>{{this.title}}</h2></a>
             <p>{{this.abstract}}</p>
         </div>
-        <img src="{{this.media.0.media-metadata.0.url}}">
+        <img src="{{this.media.0.media-metadata.1.url}}">
     </div>
     <br>
 {{/each}}
