--- a/src/public/stylesheets/styles.css
+++ b/src/public/stylesheets/styles.css
@@ -89,3 +89,18 @@ form input {
 .article > img {
     height: 100%;
 }
+
+@media only screen and (max-width: 1000px) {
+
+}
+
+@media only screen and (max-width: 650px) {
+    .article {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .article > img {
+        justify-self: flex-end;
+    }
+}
